--- a/clients.html
+++ b/clients.html
@@ -4,7 +4,7 @@
 <head onload="validalogin();">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico" />
     <title>Hookah brothers - cadastro produtos</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/responsive.css" media="screen and (max-width: 768px)" />
@@ -15,8 +15,9 @@
     <header>
         <div class="container">
             <a href="/index.html">
-                <img src="./images/logo.svg" alt="Hookah brothers" />
-                <h1>Hookah brothers</h1>            </a>
+                <img src="./img/logo.png" alt="Hookah brothers" />
+                <h1>Hookah brothers</h1>
+            </a>
             <div class="menu-section">
                 <div class="menu-toggle">
                     <div class="one"></div>
