--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./img/favicon.ico" />
     <title>Hookah brothers - cadastro produtos</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/responsive.css" media="screen and (max-width: 768px)" />
@@ -15,7 +15,7 @@
     <header>
         <div class="container">
             <a href="/">
-                <img src="./images/logo.svg" alt="Hookah brothers" />
+                <img src="./img/logo.png" alt="Hookah brothers" />
                 <h1>Hookah brothers</h1>
             </a>
             <div class="menu-section">
@@ -27,8 +27,8 @@
                 <nav>
                     <ul>
                         <li><a href="#">Inicio</a></li>
-                        <li><a href="clientes.html">clientes</a></li>
-                        <li><a href="produtos.html">produtos</a></li>
+                        <li><a href="clients.html">clientes</a></li>
+                        <li><a href="products.html">produtos</a></li>
                     </ul>
                 </nav>
             </div>
