--- a/clients.html
+++ b/clients.html
@@ -42,7 +42,7 @@
                 <input type="address" placeholder="Endereço" id="endereco">
                 <input type="email" placeholder="Email" id="email">
                 <input type="phone" placeholder="Telefone" id="telefone">
-                <button onclick="cadastrarCliente(); gerarTabela();" id="botao">cadastrar</button>
+                <button onclick="cadastrarCliente(); gerarTabela();" id="botao">Cadastrar</button>
             </form>
         </div>
         <div class="list-cadastro">
