--- a/products.html
+++ b/products.html
@@ -41,7 +41,7 @@
                 <input type="text" placeholder="Nome" id="nome">
                 <input type="text" placeholder="Categoria" id="categoria">
                 <input type="float" placeholder="Valor" id="valor">
-                <button onclick="cadastrarProduto(); gerarTabela();" type="submit" id="botao">cadastrar</button>
+                <button onclick="cadastrarProduto(); gerarTabela();" type="submit" id="botao">Cadastrar</button>
             </form>
         </div>
         <div class="list-cadastro">
